[package]
name = "ahnu-wlan-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "^0",default-features = false,features = ["json","gzip","brotli","deflate","rustls-tls"]}
serde = {version = "^1",features = ["derive"]}
serde_json = {version = "^1"}
config = {version = "^0"}
tokio = {version = "^1",features = ["full"]}
regex = "^1"
lazy_static = "^1"
log = "^0"
fast_log = "^1"